# nix-rust-android-app

./: .gitignore  Cargo.toml  flake.nix  mobile.toml
.cargo/: config.toml
nix/: cargo-mobile2-offline.patch  patched-cargo-mobile2.nix
src/: lib.rs
